--- a/assignment5.html
+++ b/assignment5.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Memory Game</title>
-    <link rel="shortcut icon" href="https://st2.depositphotos.com/1742172/7054/v/950/depositphotos_70546427-stock-illustration-cartoon-question-mark-with-speech.jpg">
+    <link rel="shortcut icon" href="https://st2.depositphotos.com/1742172/7431/v/950/depositphotos_74316123-stock-illustration-comic-cartoon-question-mark.jpg">
     <link rel="stylesheet" href="./css/assignment5.css">
     <link href="https://fonts.googleapis.com/css?family=Kirang+Haerang|Press+Start+2P" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
 <body>
 
     <div id="game">
-        <button>New Game!</button>
+        <button onclick="newGame()">New Game!</button>
     </div>
 
     <script src="./js/assignment5.js"></script>
